--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   </head>
 
   <body>
-    <div class="main">
-      <div id="locationName">loading</div>
-      <div class="tempBox">
-        <i id="weatherIcon" class="wi wi-day-hail"></i>
-        <span id="currentTemp">-5</span>
-      </div>
-      <div id="moreDetes">
-        <div id="description">
-          Maybe rainy, maybe sunny
+    <div class="gradient">
+      <div class="main">
+        <div id="locationName">Current Location</div>
+        <div class="tempBox">
+          <i id="weatherIcon" class="wi wi-day-hail"></i>
+          <span id="currentTemp">-5</span>
         </div>
-        <div id="temp_max">High</div>
-        <div id="temp_min">Low</div>
+        <div id="moreDetes">
+          <div id="description">
+            Maybe rainy, maybe sunny
+          </div>
+          <div id="temp_max">High</div>
+          <div id="temp_min">Low</div>
+        </div>
       </div>
     </div>
   </body>
