changed up success response logic and more styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <div id="temp_max">High</div>
           <div id="temp_min">Low</div>
         </div>
+        <p id="data"></p>
       </div>
     </div>
   </body>
